updated sci and student team

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 	                    <span class="icon-bar"></span>
 	                    <span class="icon-bar"></span>
 	                  </button>
-<!--	                  <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>-->
+	                  <a class="navbar-brand" href="#"></a>
+                      <h4> Xinyi (Emilia) Chen</h4>
 	                </div>
 
 	                <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,8 +74,7 @@
 	                  <ul class="nav navbar-nav navbar-right">
 	                    <li><a href="#ABOUT">About</a></li>
 	                    <li><a href="#SCIENCE">Science</a></li>
-	                    <li><a href="#SCIENCE">Biodesign</a></li>
-                        <li><a href="#SCICOMM">Scientific communication</a></li>
+                        <li><a href="#STUTEAM">Student Team</a></li>
 	                    <li><a href="#EXPLORE">Exploration</a></li>
 	                  </ul>
 	                </div><!-- /.navbar-collapse -->
@@ -97,16 +97,17 @@
         </div>
         <div class="container">
             <div class="row">
+                <div class="col-md-4  wow fadeInRight animated">
+                    <img src="images/Emilia_Chen.png" alt="profile_pic" style="width: 50%; height: 50%">
+
+                </div>
+
                 <div class="col-md-4  wow fadeInLeft animated">
                     <p class="about_us_p">
                         Hi, this is Emilia! I am a computational biologist-to-be who is passionate about integrating computational technologies to tease apart the world of biology.
                         <br><br>
                         More about my research interests and journey here.
                     </p>
-                </div>
-                <div class="col-md-4  wow fadeInRight animated">
-                    <p></p>
-
                 </div>
                 <div class="col-md-4  wow fadeInRight animated">
                     <p class="about_us_p">
@@ -122,7 +123,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="timeline_title">
-                        <h2>Timeline</h2>
+                        <h2>Journey</h2>
                     </div>
                 </div>
             </div>
@@ -188,9 +189,9 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="work_title  wow fadeInUp animated">
-                        <h1>Science and biodesign</h1>
+                        <h1>Science</h1>
                         <img src="images/shape.png" alt="">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna <br> aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
+                        <p>I am enthusiastic about integrating computer science in biological research.</p>
                     </div>
                 </div>
             </div>
@@ -199,21 +200,21 @@
             <div class="row">
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="images/w1.jpg" alt="">
+                        <img src="images/nucleosome.jpg" alt="">
                         <div class="image_overlay">
                             <a href="">View Full Project</a>
-                            <h2>drawing</h2>
-                            <h4>with pencil colors</h4>
+                            <h2>Get RNA abundance from cfDNA</h2>
+                            <h4>Footprint nucleosome in cfDNA</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="images/w2.jpg" alt="">
+                        <img src="images/randomDNA.jpg" alt="">
                         <div class="image_overlay">
                             <a href="">View Full Project</a>
-                            <h2>drawing</h2>
-                            <h4>with pencil colors</h4>
+                            <h2>Explore the impact of DNA sequence features in cis-regulation</h2>
+                            <h4>MPRA of random DNA in hESCs</h4>
                         </div>                        
                     </div>
                 </div>
@@ -222,21 +223,98 @@
                         <img src="images/w3.jpg" alt="">
                         <div class="image_overlay">
                             <a href="">View Full Project</a>
-                            <h2>drawing</h2>
-                            <h4>with pencil colors</h4>
-                        </div>                        
+                            <h2>To be continued</h2>
+                            <h4></h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row pad_top">
+<!--                <div class="col-md-4 no_padding">-->
+<!--                    <div class="single_image">-->
+<!--                        <img src="images/w4.jpg" alt="">-->
+<!--                        <div class="image_overlay">-->
+<!--                            <a href="">View Full Project</a>-->
+<!--                            <h2>drawing</h2>-->
+<!--                            <h4>with pencil colors</h4>-->
+<!--                        </div>                        -->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-4 no_padding">-->
+<!--                    <div class="single_image">-->
+<!--                        <img src="images/w5.jpg" alt="">-->
+<!--                        <div class="image_overlay">-->
+<!--                            <a href="">View Full Project</a>-->
+<!--                            <h2>drawing</h2>-->
+<!--                            <h4>with pencil colors</h4>-->
+<!--                        </div>                        -->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-md-4 no_padding">-->
+<!--                    <div class="single_image last_padding">-->
+<!--                        <img src="images/w6.jpg" alt="">-->
+<!--                        <div class="image_overlay">-->
+<!--                            <a href="">View Full Project</a>-->
+<!--                            <h2>drawing</h2>-->
+<!--                            <h4>with pencil colors</h4>-->
+<!--                        </div>                        -->
+<!--                    </div>-->
+<!--                </div>-->
+            </div>           
+        </div>
+    </section>
+    <section class="stuTeam" id="STUTEAM">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <div class="work_title  wow fadeInUp animated">
+                    <h1>Student Team</h1>
+                    <img src="images/shape.png" alt="">
+                    <p>What's more important in science is to allow others to understand and get more interested in research and innovation.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4 no_padding">
+                    <div class="single_image">
+                        <img src="images/paralyte.jpg" alt="">
+                        <div class="image_overlay">
+                            <a href="">View Full Project</a>
+                            <h2>Paralyte</h2>
+                            <h4>Biosensor for paralytic shellfish toxin</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 no_padding">
+                    <div class="single_image">
+                        <img src="images/VPRE.jpg" alt="">
+                        <div class="image_overlay">
+                            <a href="">View Full Project</a>
+                            <h2>VPRE</h2>
+                            <h4>Modelling SARS-CoV-2 spike protein evolution</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 no_padding">
+                    <div class="single_image">
+                        <img src="images/detecTME.jpg" alt="">
+                        <div class="image_overlay">
+                            <a href="">View Full Project</a>
+                            <h2>detecTME</h2>
+                            <h4>Biosensor for tumor immune microenvironment</h4>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row pad_top">
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="images/w4.jpg" alt="">
+                        <img src="images/micb448s.jpg" alt="">
                         <div class="image_overlay">
                             <a href="">View Full Project</a>
-                            <h2>drawing</h2>
-                            <h4>with pencil colors</h4>
-                        </div>                        
+                            <h2>MICB 448S</h2>
+                            <h4>Introduction to Biological Machines</h4>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4 no_padding">
@@ -244,9 +322,9 @@
                         <img src="images/w5.jpg" alt="">
                         <div class="image_overlay">
                             <a href="">View Full Project</a>
-                            <h2>drawing</h2>
-                            <h4>with pencil colors</h4>
-                        </div>                        
+                            <h2>Young innovators and the bioeconomy</h2>
+                            <h4>A book chapter for Genomics and the Global Bioeconomy</h4>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4 no_padding">
@@ -254,21 +332,10 @@
                         <img src="images/w6.jpg" alt="">
                         <div class="image_overlay">
                             <a href="">View Full Project</a>
-                            <h2>drawing</h2>
-                            <h4>with pencil colors</h4>
-                        </div>                        
+                            <h2>To be continued</h2>
+                            <h4></h4>
+                        </div>
                     </div>
-                </div>
-            </div>           
-        </div>
-    </section>
-    <section class="scicomm" id="SCICOMM">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <div class="work_title  wow fadeInUp animated">
-                    <h1>Scientific Communication</h1>
-                    <img src="images/shape.png" alt="">
-                    <p>What's more important in science is to allow others to understand and get more interested in research and innovation.</p>
                 </div>
             </div>
         </div>
@@ -375,7 +442,7 @@
     <script src="js/jquery.nicescroll.js"></script>
     <script src="js/owl.carousel.js"></script>
     <script src="js/wow.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.js" type="text/javascript"></script>
 
 
 </body>
