--- a/index.html
+++ b/index.html
@@ -98,32 +98,28 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4  wow fadeInRight animated">
-                    <img src="images/Emilia_Chen.png" alt="profile_pic" style="width: 50%; height: 50%">
+                    <img src="images/Emilia_Chen.jpg" alt="profile_pic" style="width: 70%; height: 70%">
 
                 </div>
-
-                <div class="col-md-4  wow fadeInLeft animated">
+                <div class="wow fadeInLeft animated">
                     <p class="about_us_p">
-                        Hi, this is Emilia! I am a computational biologist-to-be who is passionate about integrating computational technologies to tease apart the world of biology.
+                        Hi, this is Emilia! I am a PhD student at the University of Pennsylvania studying <b> Genomics and Computational Biology </b> (GCB). Simply put, I am using computational codes to study biological questions.
                         <br><br>
-                        More about my research interests and journey here.
-                    </p>
-                </div>
-                <div class="col-md-4  wow fadeInRight animated">
-                    <p class="about_us_p">
-                        Outside of science, I am also a huge fan of cooking, travelling (trying food from different places), exploring the great nature, and meeting new people!
+                        I am broadly interested in genomics and systems biology, and especially in the context of <b>cancers</b> and <b>the immune system</b>. I am enthusiastic to pursue a multidisciplinary approach 
+                        to uncover some of the intricacies in such systems.
+                        <br><br>
+                        Outside of science, I am also a huge fan of cooking, trying out new food, travelling, photographing, exploring the great nature, and meeting new people!
                     </p>
                 </div>
             </div>
         </div>
     </section>
-    <br><hr>
     <section class="timeline" id="TIMELINE">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="timeline_title">
-                        <h2>Journey</h2>
+                        <h2>MY JOURNEY</h2>
                     </div>
                 </div>
             </div>
@@ -164,16 +160,25 @@
             </div>
             <div class="description-flex-container">
                 <p>
-                    I started my undergradate degree at the University of British Columbia!
+                    I moved from <b>Guangzhou, China</b> to <b>Vancouver, Canada</b> to pursue my undergradate degree at the <b>University of British Columbia</b>! <br><br>
+                    I didn't know then what I was getting myself into nor did I know what I wanted to do in the future, but that was exactly why I wanted to move out of my comfort zone and see a bigger world.
                 </p>
                 <p>
-                    I decided to major in a combined degree of Microbiology & Immunology and Computer Science.
+                    I decided to pursue a combined major of Microbiology & Immunology and Computer Science <a href='https://www.calendar.ubc.ca/vancouver/index.cfm?tree=12,215,410,430'>link</a>.<br><br>
+                    At that time, I simply was amazed that CS made sense to me, so I thought that it would be fantastic to do both CS and biology (which I knew I would love). Back then, I didn't know bioinformatics was trending up or I might end up doing a PhD in this field.
                 </p>
                 <p>
-                    I joined UBC iGEM, a student-led multidisciplinary research team that aims to leverage synthetic biology to solve problems in the real life. This marked the start of my journey to create biological systems for useful purposes.
+                    I joined <b>UBC iGEM</b> <a href='www.ubcigem.com'>link</a>, a student-led multidisciplinary research team that leverages synthetic biology to solve problems in the real life. 
+                    I turned to extracurriculars for opportunities to integrate CS and biology, and stumbled across this team that transformed my undergrad.  <br><br>
+                    Over the three years I have been on the team, I learnt skills in wet lab doing benchwork, in dry lab in building in silico models, and in leadership as the team director.<br><br>
+                    Myself, along with a few other core members of the team, wrote our experience up into a book chapter: <br>
+                    Chen, X. E., King, S., Ng, S. W., Salman, P., Schwab, J. C., & Sekhon, P. (2023). Young innovators and the bioeconomy. <i>In Genomics and the Global Bioeconomy</i> (pp. 83-100). Academic Press. <a href="https://doi.org/10.1016/B978-0-323-91601-1.00005-5">https://doi.org/10.1016/B978-0-323-91601-1.00005-5</a>
                 </p>
                 <p>
-                    I joined Dr. Alex Wyatt's lab as a bioinformatics Co-op student. This marked the start of my research journey.
+                    Intrigued about research, I joined Dr. Alex Wyatt's lab <a href="https://blogs.ubc.ca/wyattlab/">link</a> as a bioinformatics Co-op student. Desipte COVID situations, I gained experience in sequencing data analysis, bioinformatic pipeline development,
+                    and I was fortunate to learn after a team of brilliant scientists. <br><br>
+                    Herberts, C.<sup>#</sup>, Annala, M.<sup>#</sup>, Sipola, J.<sup>#</sup>, Ng, S. W., <b>Chen, X. E.</b>, Nurminen, A., ... & Wyatt, A. W. (2022). Deep whole-genome ctDNA chronology of treatment-resistant prostate cancer. <i>Nature</i>, 608(7921), 199-208. <br>
+                    Sperger, J. M.<sup>#</sup>, Emamekhoo, H.<sup>#</sup>, McKay, R. R.<sup>#</sup>, Stahlfeld, C. N., Singh, A., <b>Chen, X. E.</b>, ... & Lang, J. M. (2021). Prospective evaluation of clinical outcomes using a multiplex liquid biopsy targeting diverse resistance mechanisms in metastatic prostate cancer. <i>Journal of Clinical Oncology</i>, 39(26), 2926-2937.
                 </p>
                 <p>
                     I joined Dr. Carl de Boer's lab as a directed studies student.
