added new pages on projects

--- a/index.html
+++ b/index.html
@@ -131,16 +131,16 @@
                     <span data-year="2017" data-info="Undergrad @UBC"></span>
                 </div>
                 <div class="input">
-                    <span data-year="2018" data-info=""></span>
+                    <span data-year="2018" data-info="Combined major"></span>
                 </div>
                 <div class="input">
-                    <span data-year="2019" data-info="Start of iGEM journey"></span>
+                    <span data-year="2019" data-info="iGEM journey"></span>
                 </div>
                 <div class="input">
-                    <span data-year="2020" data-info="Start of research"></span>
+                    <span data-year="2020" data-info="Ugrad research 1"></span>
                 </div>
                 <div class="input">
-                    <span data-year="2021" data-info=""></span>
+                    <span data-year="2021" data-info="Ugrad research 2"></span>
                 </div>
                 <div class="input active">
                     <span data-year="2022" data-info="Grad school @UPenn GCB"></span>
@@ -168,23 +168,27 @@
                     At that time, I simply was amazed that CS made sense to me, so I thought that it would be fantastic to do both CS and biology (which I knew I would love). Back then, I didn't know bioinformatics was trending up or I might end up doing a PhD in this field.
                 </p>
                 <p>
-                    I joined <b>UBC iGEM</b> <a href='www.ubcigem.com'>link</a>, a student-led multidisciplinary research team that leverages synthetic biology to solve problems in the real life. 
-                    I turned to extracurriculars for opportunities to integrate CS and biology, and stumbled across this team that transformed my undergrad.  <br><br>
-                    Over the three years I have been on the team, I learnt skills in wet lab doing benchwork, in dry lab in building in silico models, and in leadership as the team director.<br><br>
+                    I joined <b>UBC iGEM</b> <a href='www.ubcigem.com'>link</a>, a student-led multidisciplinary research team that leverages synthetic biology to solve problems in the real life. <br><br>
+                    I turned to extracurriculars for opportunities to integrate CS and biology, and stumbled across this team that transformed my undergrad. Over the three years I have been on the team, I learnt skills in wet lab doing benchwork, in dry lab in building in silico models, and in leadership as the team director.<br><br>
                     Myself, along with a few other core members of the team, wrote our experience up into a book chapter: <br>
                     Chen, X. E., King, S., Ng, S. W., Salman, P., Schwab, J. C., & Sekhon, P. (2023). Young innovators and the bioeconomy. <i>In Genomics and the Global Bioeconomy</i> (pp. 83-100). Academic Press. <a href="https://doi.org/10.1016/B978-0-323-91601-1.00005-5">https://doi.org/10.1016/B978-0-323-91601-1.00005-5</a>
                 </p>
                 <p>
-                    Intrigued about research, I joined Dr. Alex Wyatt's lab <a href="https://blogs.ubc.ca/wyattlab/">link</a> as a bioinformatics Co-op student. Desipte COVID situations, I gained experience in sequencing data analysis, bioinformatic pipeline development,
+                    Intrigued about research, I joined Dr. Alex Wyatt's lab <a href="https://blogs.ubc.ca/wyattlab/">link</a> as a bioinformatics Co-op student. The lab focuses on utilizing circulating tumor DNA to study advanced prostate and bladder cancer genomes and to find biomarkers to direct precision treatment. Desipte COVID situations, I gained experience in sequencing data analysis, bioinformatic pipeline development,
                     and I was fortunate to learn after a team of brilliant scientists. <br><br>
-                    Herberts, C.<sup>#</sup>, Annala, M.<sup>#</sup>, Sipola, J.<sup>#</sup>, Ng, S. W., <b>Chen, X. E.</b>, Nurminen, A., ... & Wyatt, A. W. (2022). Deep whole-genome ctDNA chronology of treatment-resistant prostate cancer. <i>Nature</i>, 608(7921), 199-208. <br>
-                    Sperger, J. M.<sup>#</sup>, Emamekhoo, H.<sup>#</sup>, McKay, R. R.<sup>#</sup>, Stahlfeld, C. N., Singh, A., <b>Chen, X. E.</b>, ... & Lang, J. M. (2021). Prospective evaluation of clinical outcomes using a multiplex liquid biopsy targeting diverse resistance mechanisms in metastatic prostate cancer. <i>Journal of Clinical Oncology</i>, 39(26), 2926-2937.
+                    Herberts, C.<sup>&#8224</sup>, Annala, M.<sup>&#8224</sup>, Sipola, J.<sup>&#8224</sup>, Ng, S. W., <b>Chen, X. E.</b>, Nurminen, A., ... & Wyatt, A. W. (2022). Deep whole-genome ctDNA chronology of treatment-resistant prostate cancer. <i>Nature</i>, 608(7921), 199-208. <br>
+                    Sperger, J. M.<sup>&#8224</sup>, Emamekhoo, H.<sup>&#8224</sup>, McKay, R. R.<sup>&#8224</sup>, Stahlfeld, C. N., Singh, A., <b>Chen, X. E.</b>, ... & Lang, J. M. (2021). Prospective evaluation of clinical outcomes using a multiplex liquid biopsy targeting diverse resistance mechanisms in metastatic prostate cancer. <i>Journal of Clinical Oncology</i>, 39(26), 2926-2937.<br><br>
+
+                    During my time at the Wyatt lab, I collaborated with Dr. Peter Black's lab, a neighboring lab, on a study on profiling multiomic features of metastatic bladder cancer tumors that had extraordinary response to chemotherapy. 
                 </p>
                 <p>
-                    I joined Dr. Carl de Boer's lab as a directed studies student.
+                    This is my last year of undergraduate degree! This year, I joined Dr. Carl de Boer's lab <a href="https://deboer.bme.ubc.ca/">link</a> for a Directed Studies project <a href="https://www.biology.ubc.ca/biol-448-directed-studies/">link</a>, because I wanted to gain more experience in hybrid lab with both experimental and computational research. Dr. de Boer's research focuses on
+                    learning the language of DNA cis-regulatory elements by performing high throughput experiments and applying machine learning models to understand the resulting data. Not only did I got to learn more about designing experiments, tickering around established deep learning models, and working with great mentors in both fields! <br><br> 
+                    One other thing struck me at the de Boer lab was how much of a community feeling I got at the School of Biomedical Engineering (SBME). People in that community have regular social interactions which facilitates research collaboration and nice working environments. 
                 </p>
                 <p>
-                    I got into graduate school!
+                    I got into graduate school at the University of Pennsylvania at the program of Genomics and Computatiaonal Biology! <br><br>
+                    I have just finished a rotation at Dr. Andy Minn's lab <a href="https://www.minnlab.org/">link</a> who focuses on interferon signalling in cancers that contribute to resistance in cancer radiation and immunotherapies.
                 </p>
             </div>
         </div>
@@ -196,7 +200,7 @@
                     <div class="work_title  wow fadeInUp animated">
                         <h1>Science</h1>
                         <img src="images/shape.png" alt="">
-                        <p>I am enthusiastic about integrating computer science in biological research.</p>
+                        <p>Some of my research projects in bioinformatics and computational biology.</p>
                     </div>
                 </div>
             </div>
@@ -208,7 +212,7 @@
                         <img src="images/nucleosome.jpg" alt="">
                         <div class="image_overlay">
                             <a href="">View Full Project</a>
-                            <h2>Get RNA abundance from cfDNA</h2>
+                            <h2>From cfDNA to RNA abundance</h2>
                             <h4>Footprint nucleosome in cfDNA</h4>
                         </div>
                     </div>
