--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 	                    <li><a href="#SCIENCE">Science</a></li>
                         <li><a href="#STUTEAM">Student Team</a></li>
 	                    <li><a href="#EXPLORE">Exploration</a></li>
+                        <li><a href="#CV">CV</a></li>
 	                  </ul>
 	                </div><!-- /.navbar-collapse -->
 	              </div><!-- /.container -->
@@ -211,7 +212,7 @@
                     <div class="single_image">
                         <img src="images/nucleosome.jpg" alt="">
                         <div class="image_overlay">
-                            <a href="">View Full Project</a>
+                            <a href="research_nucleosome_project.html">View Full Project</a>
                             <h2>From cfDNA to RNA abundance</h2>
                             <h4>Footprint nucleosome in cfDNA</h4>
                         </div>
@@ -221,17 +222,17 @@
                     <div class="single_image">
                         <img src="images/randomDNA.jpg" alt="">
                         <div class="image_overlay">
-                            <a href="">View Full Project</a>
-                            <h2>Explore the impact of DNA sequence features in cis-regulation</h2>
-                            <h4>MPRA of random DNA in hESCs</h4>
+                            <a href="research_random_dna_project.html">View Full Project</a>
+                            <h2>Explore features of DNA sequences in orchestrating cis-regulation</h2>
+                            <h4>MPRA of random DNA in hESCs and in silico modelling</h4>
                         </div>                        
                     </div>
                 </div>
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="images/w3.jpg" alt="">
+                        <img src="images/more.jpg" alt="">
                         <div class="image_overlay">
-                            <a href="">View Full Project</a>
+                            <a href=""></a>
                             <h2>To be continued</h2>
                             <h4></h4>
                         </div>
@@ -288,7 +289,7 @@
                     <div class="single_image">
                         <img src="images/paralyte.jpg" alt="">
                         <div class="image_overlay">
-                            <a href="">View Full Project</a>
+                            <a href="igem_paralyte.html">View Full Project</a>
                             <h2>Paralyte</h2>
                             <h4>Biosensor for paralytic shellfish toxin</h4>
                         </div>
@@ -328,7 +329,7 @@
                 </div>
                 <div class="col-md-4 no_padding">
                     <div class="single_image">
-                        <img src="images/w5.jpg" alt="">
+                        <img src="images/igem_book_chapter.jpeg" alt="">
                         <div class="image_overlay">
                             <a href="">View Full Project</a>
                             <h2>Young innovators and the bioeconomy</h2>
@@ -338,9 +339,9 @@
                 </div>
                 <div class="col-md-4 no_padding">
                     <div class="single_image last_padding">
-                        <img src="images/w6.jpg" alt="">
+                        <img src="images/more.jpg" alt="">
                         <div class="image_overlay">
-                            <a href="">View Full Project</a>
+                            <a href=""></a>
                             <h2>To be continued</h2>
                             <h4></h4>
                         </div>
@@ -394,6 +395,22 @@
         </div>
     </section>
 
+    <section class="work_area" id="CV">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <div class="work_title  wow fadeInUp animated">
+                    <h1>CV</h1>
+                    <img src="images/shape.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <iframe src="/Users/emiliac/Documents/Personal/CV/Xinyi_Emilia_Chen_Resume_2022_Nov.pdf" width="60%" height="800px"></iframe>
+            </div>
+        </div>
+    </section>
+
     <section class="contact" id="CONTACT">
         <div class="container">
             <div class="row">
@@ -405,7 +422,7 @@
                             <ul class="icon_list">
                                 <li><a href="https://www.facebook.com/emilia.chen.5836"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="https://twitter.com/EmiliaCXY"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href=""><i class="fa fa-google-plus"></i></a></li>
+                                <li><a href="https://scholar.google.com/citations?user=Ahx688gAAAAJ&hl=en"><i class="fa fa-google-plus"></i></a></li>
                                 <li><a href="https://www.linkedin.com/in/emilia-xinyi-chen-b71055180/"><i class="fa fa-linkedin"></i></a></li>
                                 <li><a href="https://www.instagram.com/emiliac0717/"><i class="fa fa-instagram"></i></a></li>
                             </ul>
