--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <img src="images/Emilia_Chen.jpg" alt="profile_pic" style="width: 70%; height: 70%">
 
                 </div>
-                <div class="wow fadeInLeft animated">
+                <div class="col-md-7 wow fadeInLeft animated">
                     <p class="about_us_p">
                         Hi, this is Emilia! I am a PhD student at the University of Pennsylvania studying <b> Genomics and Computational Biology </b> (GCB). Simply put, I am using computational codes to study biological questions.
                         <br><br>
@@ -299,7 +299,7 @@
                     <div class="single_image">
                         <img src="images/VPRE.jpg" alt="">
                         <div class="image_overlay">
-                            <a href="">View Full Project</a>
+                            <a href="igem_vpre.html">View Full Project</a>
                             <h2>VPRE</h2>
                             <h4>Modelling SARS-CoV-2 spike protein evolution</h4>
                         </div>
@@ -309,7 +309,7 @@
                     <div class="single_image">
                         <img src="images/detecTME.jpg" alt="">
                         <div class="image_overlay">
-                            <a href="">View Full Project</a>
+                            <a href="igem_detectme.html">View Full Project</a>
                             <h2>detecTME</h2>
                             <h4>Biosensor for tumor immune microenvironment</h4>
                         </div>
@@ -435,7 +435,7 @@
 
 
 
-<footer>
+<!-- <footer>
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -446,7 +446,7 @@
             </div>
         </div>
     </div>
-</footer>
+</footer> -->
 
 
 
